WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
65520
[EFL] Sort signal comments by alphabetical order
https://bugs.webkit.org/show_bug.cgi?id=65520
Summary
[EFL] Sort signal comments by alphabetical order
Gyuyoung Kim
Reported
2011-08-02 00:45:42 PDT
Signal comments is listed without rule. It sure isn't a nice thing to understand all signal list. I think it is better to sort by alphabetical order. Patch will be submitted next week.
Attachments
Proposed Patch
(9.72 KB, patch)
2011-08-09 02:13 PDT
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gyuyoung Kim
Comment 1
2011-08-09 02:13:38 PDT
Created
attachment 103338
[details]
Proposed Patch
Leandro Pereira
Comment 2
2011-08-09 07:08:12 PDT
Comment on
attachment 103338
[details]
Proposed Patch Informal r+
Gyuyoung Kim
Comment 3
2011-08-09 08:43:30 PDT
Hello kent, could you please review this patch ?
WebKit Review Bot
Comment 4
2011-08-09 17:59:55 PDT
Comment on
attachment 103338
[details]
Proposed Patch Clearing flags on attachment: 103338 Committed
r92735
: <
http://trac.webkit.org/changeset/92735
>
WebKit Review Bot
Comment 5
2011-08-09 18:00:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug