[EFL] Sort signal comments by alphabetical order. http://bugs.webkit.org/show_bug.cgi?id=65520

Reviewed by Kent Tamura.

Signals caused by ewk still are listed without any specific rule.
It sure isn't a nice thing to understand the signal list. So, this patch
lists signals by alphabetical order.

* ewk/ewk_contextmenu.h:
* ewk/ewk_frame.h:
* ewk/ewk_view.h:


Canonical link: https://commits.webkit.org/81814@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92735 268f45cc-cd09-0410-ab3c-d52691b4dbfc